processed/jira/txt/LU/LU-11511.txt
Key:        LU-11511
Summary:    ‘LMV_HASH_FLAG_DEAD’ undeclared
Link:       https://jira.whamcloud.com/browse/LU-11511
Type:       Bug
Priority:   Critical
Status:     Resolved
Resolution: Fixed
Assignee:   Lai Siyao
Reporter:   Qian Yingjin
Created:    Fri, 12 Oct 2018 03:46:40 +0000
Updated:    Mon, 25 Nov 2019 20:16:19 +0000
Resolved:   Wed, 14 Aug 2019 02:32:57 +0000

--- Description ---
lustre-release/lustre/lfsck/lfsck_striped_dir.c: In function ‘lfsck_read_stripe_lmv’:

/root/qian/LSOM/dom/lustre-release/lustre/lfsck/lfsck_striped_dir.c:871:30: error: ‘LMV_HASH_FLAG_DEAD’ undeclared (first us

 !(lmv->lmv_hash_type & LMV_HASH_FLAG_DEAD)))

 ^

lustre-release/lustre/lfsck/lfsck_striped_dir.c:871:30: note: each undeclared identifier is reported onl

lustre-release/lustre/lfsck/lfsck_striped_dir.c: At top level:

cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

 

This build problem is same as LU-9995 :lbuild error: 'LMV_HASH_FLAG_DEAD' undeclared (first use in this function)

--- Comment (laisiyao, Tue, 9 Jul 2019 02:20:20 +0000) ---
https://review.whamcloud.com/#/c/35318/ has removed this flag, this ticket can be closed after landing the patch.

--- Comment (green, Fri, 12 Oct 2018 16:40:15 +0000) ---
We cannot close this ticket since we will forget about it come 2.13 time.

We need to leave this open and have somebody actually work on defusing the timebomb.

--- Comment (pjones, Fri, 12 Oct 2018 12:33:25 +0000) ---
Landed for 2.12

--- Comment (gerrit, Fri, 12 Oct 2018 04:33:04 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/33356/

Subject: LU-11511 fix build breakage with LMV_HASH_FLAG_DEAD undeclared

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 5f4ca70b2aa45174907d3924b63bd953180674fe

--- Comment (gerrit, Fri, 12 Oct 2018 03:58:11 +0000) ---
Oleg Drokin (green@whamcloud.com) uploaded a new patch: https://review.whamcloud.com/33356

Subject: LU-11511 fix build breakage with LMV_HASH_FLAG_DEAD undeclared

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 269725175f2c93d660a2c877a9a478d1554fbffb

--- Comment (green, Fri, 12 Oct 2018 03:55:31 +0000) ---
yeah, we don't need to be deprecating it this soon
